--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login Portal</title>
 </head>
+<script type="styles" src="./index.css"></script>
 <body>
   <div id="main-container">
     <div id="content">
